Create RawgApiClient #6 and update Game.java